<resources>
    <string name="app_name" translatable="false">e-GRAS</string>
    <string name="title_activity_main" translatable="false">e-GRAS</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="logout_menu_item">Logout</string>
    <string name="settings_menu_item">Settings</string>
    <string name="search_challan_menu_item">Search Challan</string>
    <string name="make_payment_menu_item">Make Payment</string>
    <string name="transaction_history_menu_item">Transaction History</string>
    <string name="about_menu_item">About e-GRAS</string>
    <string name="display_name">e-GRAS User</string>
    <string name="make_payment_activity">Make Payment</string>
    <string name="my_profile_activity">Edit Profile</string>
    <string name="display_name_label">Display Name</string>
    <string name="phone_number_label">Phone Number</string>
    <string name="email_label">Email</string>
    <string name="new_password_label">New Password</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="update_password_button">Change Password</string>
    <string name="update_message">Updating…</string>
    <string name="fab_tap_target_title">Make Payment Button</string>
    <string name="fab_tap_target_desc">Tap this button to make a new payment…</string>
    <string name="title_about_egras">About e-GRAS</string>
    <string name="about_page_description">
        e-GRAS is an electronic payment gateway to receive payments electronically. It\'s a medium for on-line payment of
        Assam State\'s Taxes through the internet portals of various banks. To avail of this facility the taxpayer is required
        to have a net-banking account with any of the banks listed by the government on e-GRAS site. This is a 24X7 facility and
        citizen can make the payment any time of the day. To know more, please visit the official web site.
    </string>
    <string name="connect_us_label">Connect with us</string>
    <string name="egras_web_address" translatable="false">https://assamegras.gov.in/</string>
    <string name="version_info">Version 1.0</string>
    <string name="developer_info">Developed by NIC</string>
    <string name="as_lang_label">Assamese</string>
    <string-array name="language_entries">
        <item>English</item>
        <item>@string/as_lang_label</item>
    </string-array>
    <string-array name="language_values">
        <item>en</item>
        <item>as</item>
    </string-array>
    <string-array name="theme_entries">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="theme_values">
        <item>lt</item>
        <item>dk</item>
    </string-array>
    <string name="title_settings_activity">Settings</string>
    <string name="lang_pref_title">Language</string>
    <string name="lang_pref_summary" translatable="false">English</string>
    <string name="lang_pref_key" translatable="false">lang</string>
    <string name="lang_pref_default_value" translatable="false">en</string>
    <string name="lang_pref_dialog_title">Choose a language</string>
    <string name="theme_pref_title">Theme</string>
    <string name="theme_pref_summary" translatable="false">Light</string>
    <string name="theme_pref_key" translatable="false">theme</string>
    <string name="theme_pref_default_value" translatable="false">lt</string>
    <string name="theme_pref_dialog_title">Choose a theme</string>
    <string name="error_label_bottom_dialog">Error</string>
    <string name="app_restart_info">You need to restart the application for the changes to take effect</string>
    <string name="error_no_network">No network connection available. You are offline</string>
    <string name="error_server_down">The Server is not reachable at the moment</string>
    <string name="spot_dialog_message">Please wait…</string>
    <string name="scheme_enter_amount">Enter Amount…</string>
    <string name="msg_verify_form_data">Please, verify the data you have entered before submitting the from.
        \n\nYou can go back and forth between the forms by selecting the stage number above.
        \n\nOnce, everything is verified, hit \"Submit\".
    </string>
    <string name="title_payment_gateway">Payment Gateway</string>
    <string name="message_online">You are now online</string>
    <string name="label_tran_history">Transaction History</string>
    <string name="label_tran_details">Transaction Details</string>
    <string name="number_picker_formatter" translatable="false">%4d</string>
    <string name="label_department_details">Department Details</string>
    <string name="label_select_dept">Select Department *</string>
    <string name="label_select_payment">Select Payment Type *</string>
    <string name="label_select_district">Select District *</string>
    <string name="label_select_office">Select Office Name *</string>
    <string name="label_select_year">Select Year *</string>
    <string name="label_select_period">Select Period *</string>
    <string name="label_select_month">Select Month *</string>
    <string name="label_select_from_date">Select From Date *</string>
    <string name="label_select_to_date">Select To Date *</string>
    <string name="label_button_next">Next</string>
    <string name="label_select_form_id">Select Form ID *</string>
    <string name="label_tax_id">Department Tax ID *</string>
    <string name="label_name">Name *</string>
    <string name="label_pan">PAN</string>
    <string name="label_block_no">Block No/Premises</string>
    <string name="label_locality_road">Locality/Road</string>
    <string name="label_area_city">Area/City</string>
    <string name="label_pin">PIN</string>
    <string name="label_mobile_no">Mobile No. *</string>
    <string name="label_remarks">Remarks</string>
    <string name="label_button_submit">Submit</string>
    <string name="label_no_schemes_found">No schemes found…</string>
    <string name="label_scheme_details">Scheme Details</string>
    <string name="label_payer_details">Payer Details</string>
    <string name="label_verify_data">Verify Input Data</string>
    <string name="label_attention">Attention!</string>
    <string name="label_field_mandatory">Fields marked with \"*\" are mandatory</string>
    <string name="label_challan_date">Challan Date</string>
    <string name="label_grn_no">GRN NO</string>
    <string name="label_sheme_code">Sheme Code</string>
    <string name="label_sheme_name">Sheme Name</string>
    <string name="label_amount">Amount</string>
    <string name="label_total_amount">Total Amount</string>
    <string name="label_office_location">Office Location</string>
    <string name="label_mode_of_payment">Mode of Payment Selected</string>
    <string name="label_status">Status</string>
    <string name="label_payment_verification">Verify Payment with Bank</string>
    <string name="label_select_year_and_month">Select Year and Month(s)…</string>
    <string name="label_year">Year:</string>
    <string name="label_month">Month:</string>
    <string name="label_done">Done</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_no_transaction_history_found">No transaction history found</string>
    <string name="label_no_transaction">No new transactions found</string>
    <string name="annual">Annual</string>
    <string name="half">Half Yearly</string>
    <string name="quater">Quarterly</string>
    <string name="month">Monthly</string>
    <string name="one_time">One Time/Adhoc</string>
    <string name="specific">Specific Period</string>
    <string-array name="spinner_data_period">
        <item>@string/annual</item>
        <item>@string/half</item>
        <item>@string/quater</item>
        <item>@string/month</item>
        <item>@string/one_time</item>
        <item>@string/specific</item>
    </string-array>
    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="apr">Apr</string>
    <string name="may">May</string>
    <string name="jun">Jun</string>
    <string name="jul">Jul</string>
    <string name="aug">Aug</string>
    <string name="sep">Sep</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dec">Dec</string>
    <string-array name="spinner_data_months">
        <item>@string/jan</item>
        <item>@string/feb</item>
        <item>@string/mar</item>
        <item>@string/apr</item>
        <item>@string/may</item>
        <item>@string/jun</item>
        <item>@string/jul</item>
        <item>@string/aug</item>
        <item>@string/sep</item>
        <item>@string/oct</item>
        <item>@string/nov</item>
        <item>@string/dec</item>
    </string-array>
    <string name="apr_sep">April-Sept</string>
    <string name="oct_mar">Oct-March</string>
    <string-array name="spinner_data_half_yearly">
        <item>@string/apr_sep</item>
        <item>@string/oct_mar</item>
    </string-array>
    <string name="apr_june">April-June</string>
    <string name="july_sept">July-Sept</string>
    <string name="oct_dec">Oct-Dec</string>
    <string name="jan_mar">Jan-March</string>
    <string name="label_egras_info">With e-GRAS, you can easily make online payments and review all of your transaction history.</string>
    <string name="label_generate_echallan">Generation of e-challans has become easier.Just go to Payment Screen, fill up necessary details and hit Submit. Done!</string>
    <string name="label_egras_serach_challan">You can search for already generated challans and download them whenever you need.</string>
    <string name="label_review_trans"> And, to review all of your transaction history in detail, just go to Transaction History Screen.</string>
    <string-array name="spinner_data_quaterly">
        <item>@string/apr_june</item>
        <item>@string/july_sept</item>
        <item>@string/oct_dec</item>
        <item>@string/jan_mar</item>
    </string-array>
    <string name="passowrd_helper">Password should be at least 6 characters long and a mix of letters and numbers</string>
    <string name="password_error">Please, enter a valid password</string>
    <string name="error_user_name">Please, enter a valid username</string>
    <string name="error_phone">Please, enter a valid phone number</string>
    <string name="error_email">Please, enter a valid email address</string>
    <string name="error_pwds_not_match">Both the passwords must be the same</string>
    <string name="label_serach_challan">Search Challan</string>
    <string name="search_hint">Your GRN No…</string>
    <string name="label_help">Help</string>
    <string name="label_activity_log">Activity Log</string>
    <string name="message_offline">You are now offline</string>
    <string name="label_download_challan">Download Challan</string>
    <string name="label_repeat_payment">Repeat Payment</string>
    <string name="status_success" translatable="false">Success</string>
    <string name="status_pending" translatable="false">Pending</string>
    <string name="status_fail" translatable="false">Fail</string>
    <string name="label_downloading_file">Downloading Challan…</string>
    <string name="label_file_downloaded">File downloaded</string>
    <string name="label_write_file_error">No external storage</string>
    <string name="label_notification">Your challan has been downloaded</string>
    <string name="label_search_challans_here">Search challans here…</string>
    <string name="transaction_history_empty">Transaction History is Empty</string>
    <string name="label_learn_how">Learn How</string>
    <string name="label_recent_transactions">Recent Transactions</string>
    <string name="label_see_more">See More</string>
</resources>