<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="@string/lang_pref_default_value"
        android:dialogTitle="@string/lang_pref_dialog_title"
        android:entries="@array/language_entries"
        android:entryValues="@array/language_values"
        android:icon="@drawable/ic_language"
        android:key="@string/lang_pref_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary="@string/lang_pref_summary"
        android:title="@string/lang_pref_title" />

    <ListPreference
        android:defaultValue="@string/theme_pref_default_value"
        android:dialogTitle="@string/theme_pref_dialog_title"
        android:entries="@array/theme_entries"
        android:entryValues="@array/theme_values"
        android:icon="@drawable/ic_theme"
        android:key="@string/theme_pref_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary="@string/theme_pref_summary"
        android:title="@string/theme_pref_title" />

</PreferenceScreen>