<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/group1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/make_payment"
            android:icon="@drawable/ic_payment"
            android:title="@string/make_payment_menu_item" />
        <item
            android:id="@+id/transaction_history"
            android:icon="@drawable/ic_history"
            android:title="@string/transaction_history_menu_item" />
        <item
            android:id="@+id/search_challan"
            android:icon="@drawable/ic_search"
            android:title="@string/search_challan_menu_item" />

        <item
            android:id="@+id/user_profile"
            android:icon="@drawable/ic_user_profile"
            android:title="@string/user_profile_menu_item" />

    </group>

    <group android:id="@+id/group2"
        android:checkableBehavior="single">

        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings_menu_item" />

        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_about"
            android:title="@string/about_menu_item" />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout_menu_item" />
    </group>

</menu>
