<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView41"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/label_sheme_code"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/about_item_text_color" />


        <TextView
            android:id="@+id/hoa_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorAccent"
            tools:text="000-233-1717-199" />

        <View
            android:id="@+id/divider8"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/label_sheme_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/about_item_text_color" />

        <TextView
            android:id="@+id/scheme_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            tools:text="Save India, Save Earth" />

        <View
            android:id="@+id/divider9"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/label_amount"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/about_item_text_color" />

        <EditText
            android:id="@+id/scheme_amount_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/scheme_enter_amount"
            android:inputType="number"
            android:paddingStart="8dp"
            android:singleLine="true" />

    </LinearLayout>

</androidx.cardview.widget.CardView>




