<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:padding="8dp"
        android:text="@string/label_select_year_and_month"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/about_item_text_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_year"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/about_text_color" />

        <com.shawnlin.numberpicker.NumberPicker
            android:id="@+id/year_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:np_dividerColor="@color/colorAccent"
            app:np_fadingEdgeEnabled="true"
            app:np_formatter="@string/number_picker_formatter"
            app:np_max="2050"
            app:np_min="1980"
            app:np_orientation="horizontal"
            app:np_scrollerEnabled="true"
            app:np_selectedTextColor="@color/numberPickerColor"
            app:np_selectedTextSize="@dimen/selected_text_size"
            app:np_textColor="@color/about_text_color"
            app:np_typeface="@font/open_sans"
            app:np_wrapSelectorWheel="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_month"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/about_text_color" />

        <com.shawnlin.numberpicker.NumberPicker
            android:id="@+id/month_picker_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:np_dividerColor="@color/colorAccent"
            app:np_fadingEdgeEnabled="true"
            app:np_formatter="@string/number_picker_formatter"
            app:np_orientation="horizontal"
            app:np_scrollerEnabled="true"
            app:np_selectedTextColor="@color/numberPickerColor"
            app:np_selectedTextSize="@dimen/selected_text_size"
            app:np_textColor="@color/about_text_color"
            app:np_typeface="@font/open_sans"
            app:np_wrapSelectorWheel="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_month"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/about_text_color" />

        <com.shawnlin.numberpicker.NumberPicker
            android:id="@+id/month_picker_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:np_dividerColor="@color/colorAccent"
            app:np_fadingEdgeEnabled="true"
            app:np_formatter="@string/number_picker_formatter"
            app:np_orientation="horizontal"
            app:np_scrollerEnabled="true"
            app:np_selectedTextColor="@color/numberPickerColor"
            app:np_selectedTextSize="@dimen/selected_text_size"
            app:np_textColor="@color/about_text_color"
            app:np_typeface="@font/open_sans"
            app:np_wrapSelectorWheel="true" />
    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <Button
            android:id="@+id/dismiss_button"
            style="@style/FirebaseUI.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/label_cancel"
            app:layout_constraintEnd_toStartOf="@+id/filter_serach_button"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/filter_serach_button"
            style="@style/FirebaseUI.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_done"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>